--- a/final_linking.ipynb
+++ b/final_linking.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKuFT4nmNW9mFxIRzQhgav",
+      "authorship_tag": "ABX9TyPtiZc8ClhvcokeaulCc88J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Harshinikavuru/911_project/blob/main/final_linking.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Installing libraries"
+      ],
+      "metadata": {
+        "id": "SwaCoS2Tc02t"
+      }
     },
     {
       "cell_type": "code",
@@ -194,6 +203,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Importing all the libraries"
+      ],
+      "metadata": {
+        "id": "SKK86FWGc5El"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import scispacy\n",
@@ -201,26 +219,43 @@
         "import joblib\n",
         "import re\n",
         "import string\n",
-        "\n",
+        "import re\n",
+        "from nltk import word_tokenize\n",
+        "from collections import Counter\n",
+        "from tqdm import tqdm\n",
+        "from collections import defaultdict\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "\n",
         "from sklearn.datasets import fetch_20newsgroups\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "\n",
         "from sklearn.metrics import accuracy_score, cohen_kappa_score, f1_score, classification_report\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "\n",
         "from sklearn.model_selection import StratifiedKFold, train_test_split\n",
+        "from scipy.sparse import coo_matrix, hstack\n",
+        "\n",
         "from sklearn.naive_bayes import MultinomialNB\n",
-        "import re\n",
-        "from nltk import word_tokenize\n",
-        "from collections import Counter\n",
-        "from tqdm import tqdm\n",
-        "from collections import defaultdict"
+        "from sklearn import svm\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns"
       ],
       "metadata": {
         "id": "H-D0LQ6Vs1Az"
       },
-      "execution_count": 2,
+      "execution_count": 103,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Importing dataset and loading model"
+      ],
+      "metadata": {
+        "id": "vxFdztTHd2pD"
+      }
     },
     {
       "cell_type": "code",
@@ -448,6 +483,15 @@
           "execution_count": 5
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Reducing the number of categories"
+      ],
+      "metadata": {
+        "id": "bm9LD_zhd8SQ"
+      }
     },
     {
       "cell_type": "code",
@@ -1038,7 +1082,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib.pyplot as plt\n",
         "fig = plt.figure(figsize=(12, 6))\n",
         "category_counts.plot(kind='bar')\n",
         "plt.title('Category Distribution')\n",
@@ -1629,6 +1672,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## New dataset after filtering the categories"
+      ],
+      "metadata": {
+        "id": "apQrEOnHeDIT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df = pd.DataFrame(\n",
@@ -2137,6 +2189,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Text cleaning"
+      ],
+      "metadata": {
+        "id": "4mFHQ4HrczVI"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def remove_time_and_speaker(text):\n",
@@ -2451,6 +2512,15 @@
           "execution_count": 40
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## extracting key workds from text using hugging face"
+      ],
+      "metadata": {
+        "id": "PAgC0liteOlp"
+      }
     },
     {
       "cell_type": "code",
@@ -2797,6 +2867,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## splitting and vectorizing"
+      ],
+      "metadata": {
+        "id": "-NOsr1IzeVYn"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df_train, df_test = train_test_split(df, test_size=0.20, stratify=df.target)"
@@ -2837,9 +2916,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## without hugging face keywords"
+      ],
+      "metadata": {
+        "id": "vVSkxPDzeZGD"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "from sklearn import svm\n",
         "clf = svm.SVC()\n",
         "clf.fit(X_train, y_train)\n",
         "preds_before = clf.predict(X_test)\n",
@@ -3023,9 +3110,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## With hugging face key words"
+      ],
+      "metadata": {
+        "id": "M73D2PbKeefp"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "from scipy.sparse import coo_matrix, hstack\n",
         "X1 = vec.fit_transform(df_train.clean_text)\n",
         "X_test1 = vec.transform(df_test.clean_text)\n",
         "X2 = vec.fit_transform(df_train.key_words_disease)\n",
@@ -3047,7 +3142,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn import svm\n",
         "clf = svm.SVC()\n",
         "clf.fit(X_train, y_train)\n",
         "preds = clf.predict(X_test)\n",
@@ -3340,7 +3434,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.metrics import confusion_matrix\n",
         "cm_after_nb = confusion_matrix(y_test, preds_nb_after)"
       ],
       "metadata": {
@@ -3360,17 +3453,6 @@
         "id": "kky1b8StU6Z0"
       },
       "execution_count": 99,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import seaborn as sns"
-      ],
-      "metadata": {
-        "id": "8D779xxSV_uZ"
-      },
-      "execution_count": 100,
       "outputs": []
     },
     {
